force-app/main/default/objects/Predefined_Qts__c/Predefined_Qts__c.object-meta.xml
<CustomObject>
    <label>Predefined+Qts</label>
    <nameField>
        <label>Predefined+Qts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Predefined+Qts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>