force-app/main/default/objects/Predefined_Qts__c/fields/Note_Details__c.field-meta.xml
<CustomField>
    <fullName>Note_Details__c</fullName>
    <label>Note Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>