force-app/main/default/objects/Predefined_Qts__c/fields/Pre_Defined_Quote_Note__c.field-meta.xml
<CustomField>
    <fullName>Pre_Defined_Quote_Note__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pre Defined Quote Note</label>
    <referenceTo>Pre_Defined_Quote_Notes__c</referenceTo>
    <relationshipLabel>Predefined+Qts</relationshipLabel>
    <relationshipName>Predefined_Qts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>