force-app/main/default/objects/Predefined_Qts__c/fields/Quote_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Order_Number__c</fullName>
    <formula>Pre_Defined_Quote_Note__r.Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>